  instead of diagonal lines.

- The legend labelFormatter now passes the series in addition to just
  the label (suggestion by Vincent Lemeltier).

- Horizontal bars (based on patch by Jason LeBrun).

- Support for partial bars by specifying a third coordinate, i.e. they
  don't have to start from the axis. This can be used to make stacked
  bars.

- New option to disable the (grid.show).
  
- Plugin system: register an init method in the $.flot.plugins array
  to get started, see PLUGINS.txt for details on how to write plugins.

- Hooks: you can register functions that are called while Flot is
  crunching the data and doing the plot. This can be used to modify
  Flot without changing the source, useful for writing plugins. At
  this point only a few hooks are defined.
  
- Threshold plugin: you can set a threshold and a color, and the data
  points below that threshold will then get the color. Useful for
  marking data below 0, for instance.

- Stack plugin: you can specify a stack key for each series to have
  them summed. This is useful for drawing additive/cumulative graphs
  with bars and (currently unfilled) lines.

- Crosshairs plugin: trace the mouse position on the axes, enable with
  crosshair: { mode: "x"} (see the new tracking example for a use).
  
  
Bug fixes:

- Fixed two corner-case bugs when drawing filled curves (report and
  analysis by Joshua Varner).
- Fix auto-adjustment code when setting min to 0 for an axis where the
  dataset is completely flat on that axis (report by chovy).
- Fixed a bug with passing in data from getData to setData when the
  secondary axes are used (issue 65, reported by nperelman).
- Fixed so that it is possible to turn lines off when no other chart
  type is shown (based on problem reported by Glenn Vanderburg), and
  fixed so that setting lineWidth to 0 also hides the shadow (based on
  problem reported by Sergio Nunes).
- Updated mousemove position expression to the latest from jQuery (bug
  reported by meyuchas).